--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.pikachu.codepathmail">
+
+    <!-- Required permission to access the internet -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <!-- Add the <queries> element for package visibility -->
+    <queries>
+        <!-- Declare which packages your app needs to query or interact with -->
+        <!-- In this case, if you're opening URLs, you may need to query the browser app -->
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <data android:scheme="https" />
+        </intent>
+    </queries>
 
     <application
         android:allowBackup="true"
@@ -12,12 +26,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CodepathMail"
         tools:targetApi="31">
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
